--- a/netflix-landingpage-clone/style.css
+++ b/netflix-landingpage-clone/style.css
@@ -138,10 +138,7 @@ header .logo {
 .form-btn {
   display: flex;
   justify-content: center;
-  padding: 0px 60px;
-}
-.content .main-form .form-btn {
-  padding: 0 150px;
+  padding: 0px 150px;
 }
 .main-form h4 {
   margin-top: 30px;
@@ -229,7 +226,7 @@ header .logo {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 63%;
-  margin-top: -20px;
+  margin-top: -30px;
 }
 
 /* mobile download content */
@@ -319,7 +316,7 @@ header .logo {
 
 /* footer */
 footer {
-  height: 400px;
+  height: 550px;
   position: relative;
 }
 footer .area {
@@ -373,10 +370,6 @@ footer .area .area-links li a:hover {
 .footer-language .language {
   margin-top: 15px;
 }
-.footer-language .language::after,
-.footer-language .language::before {
-  color: #757575;
-}
 .footer-language .language::before {
   margin-left: 8px;
 }
@@ -386,62 +379,177 @@ footer .area .area-links li a:hover {
 }
 
 /* media queries */
-
 @media (max-width: 768px) {
-  .main{
-    height: 73vh;
-    /* yüksekliği düşür */
+  .main {
+    height: 63vh;
+    box-shadow: inset 0px 300px 300px -150px rgba(0, 0, 0, 0.9),
+      inset 0px -300px 300px -150px rgba(0, 0, 0, 0.9);
+  }
+
+  header {
+    padding: 20px 20px;
+  }
+  header .logo {
+    height: 22px;
+  }
+  .login-form {
+    gap: 12px;
+  }
+  .login-form a.login-btn {
+    width: 85px;
+    height: 28px;
+    line-height: 28px;
+    font-size: 15px;
   }
 
   .content {
-    width: 100%;
+    width: 90%;
   }
   .content h1 {
-    font-size: 2rem;
+    padding-top: 80px;
+    font-size: 1.7rem;
   }
   .content h2 {
-    font-size: 1rem;
+    margin-top: 20px;
+    font-size: 1.2rem;
   }
 
+  .form-btn {
+    flex-direction: column;
+    gap: 10px;
+    padding: 0;
+  }
+  .story-sss .main-form {
+    padding: 0 20px;
+  }
+  .main-form h4 {
+    font-size: 18px;
+    padding: 0 15px;
+    margin: 13px 0;
+  }
+  .main-form input[type="text"] {
+    height: 35px;
+    width: 100%;
+    border-radius: 4px;
+  }
+  .main-form button.start-btn {
+    height: 35px;
+    width: 30%;
+    margin: auto;
+    font-size: 16px;
+    font-weight: 400;
+    padding-left: 15px;
+    padding-right: 0;
+    text-align: start;
+  }
+  .main-form button.start-btn::after {
+    margin-right: 15px;
+  }
 
   .story-sss > h1 {
     font-size: 30px;
   }
-  .story{
-    padding:100px 10px;
+  .story {
+    padding: 50px 20px;
     width: 100%;
-    display: block;
+    display: flex;
+    flex-direction: column;
     text-align: center;
   }
   .story-text {
+    order: 1;
     width: 100%;
   }
+  .story-img {
+    order: 2;
+  }
   .story .story-text h3 {
-    font-size: 30px;
+    font-size: 25px;
   }
   .story .story-text p {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     font-size: 18px;
+    position: relative;
+    z-index: 99;
   }
-  .story img{
+  .story-img img {
+    height: 100%;
     width: 100%;
   }
   .story-sss {
-    padding: 50px 5px;
+    padding: 50px 0;
     width: 100%;
+  }
+  .story-img video.device {
+    margin-top: -5px;
+  }
+
+  .mobile-down {
+    width: 75%;
+    margin-top: -90px;
+    border-radius: 10px;
+    padding: 8px 0 8px 10px;
+  }
+  .mobile-down img {
+    height: 50px;
+    width: auto;
+  }
+  .mobile-down h3 {
+    font-size: 14px;
+    margin-left: -50px;
+  }
+
+  .dropdowns {
+    margin: 20px 0;
   }
   .dropdown-menu {
     padding: 10px 20px;
-    margin: 10px 0;
+    margin: 10px 0 1px;
   }
-  .dropdown-menu h1{
+  .dropdown-menu h1 {
     font-size: 18px;
   }
   .dropdown-content {
-    margin: 10px 0;
+    margin: 0;
+    padding: 0;
+  }
+  .dropdown-content p {
+    font-size: 18px;
+    font-weight: 400;
+    padding: 20px 20px;
   }
 
+  footer .area {
+    width: 80%;
+    padding-top: 50px;
+  }
+  footer .area h4 {
+    font-size: 18px;
+    padding-right: 50px;
+  }
   footer .area .area-links {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .footer-language {
+    width: 130px;
+    margin-bottom: 20px;
+  }
+  .footer-language select {
+    padding: 18px 40px;
+    width: 100%;
+    text-align: start;
+    border-color: #757575;
+    color: #757575;
+  }
+  .footer-language .language {
+    margin-top: 15px;
+  }
+  .footer-language .language::before {
+    margin-left: 8px;
+  }
+  .footer-language + span {
+    color: #757575;
+    font-size: 13px;
   }
 }
